--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     <li><%= link_to "Change your password", 'users/edit' %></a></li>
         <% if current_user.try(:admin?) %>
             <li><%= link_to 'Users', users_path %></li>
+            <li><%= link_to 'Home', root_path %></li>
         <% end %>
   </ul> 
 <% end %>
