--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% if current_user.try(:admin?) %>
             <li><%= link_to 'Users', users_path %></li>
               <% if current_page?('/users') %>
-                <li><%= link_to 'Home', index_path %></li>
+                <li><%= link_to 'Home', '/' %></li>
               <% end %>
         <% end %>
   </ul> 
